syntax = "proto3";

package auth;

option go_package = "common/gen/auth_service";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
  int32 role_id = 3;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message IsAdminRequest {
  string user_id = 1;
}

message IsAdminResponse {
  bool result = 1;
}